2008-01-27 Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/__init__.py: 
	Remove the use of dbstate for GuiMenuOptions in tools.

2008-01-27 Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_GuiOptions.py: 
	Fix 0001659: NumberOption fields on report dialogs

2008-01-27 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py: Fix 0001656: New menu item

2008-01-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ExportCSV.py: 
	* src/plugins/ImportCSV.py: 
	fix international/translation issues

2008-01-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/PersonView.py (PersonView.write_tabbed_file): 
	reverted previous change

2008-01-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/PersonView.py (PersonView.write_tabbed_file): 
	write out translated headers to spreadsheet

2008-01-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsDbUtils/_WriteGedcom.py (GedcomWriter.__date): 
	applied quality patch (with fixes) from issue #1210

2008-01-24 Brian Matherly <brian@gramps-project.org>
	* src/plugins/KinshipReport.py: Include count for each category.
	
2008-01-24 Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_GuiOptions.py:
	* src/ReportBase/_BareReportDialog.py:
	* src/ReportBase/_ReportOptions.py:
	Remove the use of dbstate.

2008-01-24  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsCfg.py: missing const; added Text tab
	* src/Config/_GrampsConfigKeys.py: added missing and private text
	* src/plugins/DefaultGramplets.py: use missing surname text
	* src/Simple/_SimpleAccess.py: use missing surname text

2008-01-24 Raphael Ackermann <raphael.ackermann@gmail.com>
	Removed all the __author__, __revision__ and __version__ statements

2008-01-24 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/PageView.py: import sgettext instead of gettext
	* src/DataViews.py: rename Family List View to Families View
